<resources>
    <string name="app_name">Bardun</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_main">Kart</string>
    <string name="nav_bruker">Min Profil</string>
    <string name="nav_mine_teltplasser">Mine Teltplasser</string>
    <string name="nav_favoritter">Favoritter</string>
    <string name="nav_innstillinger">Innstillinger</string>
    <string name="drawer_open">Drawer open</string>
    <string name="drawer_close">Drawer close</string>
    <string name="title_activity_maps">Map</string>
    <string name="toolbar_title_main">Bardun</string>
    <string name="toolbar_title_teltplass">Teltplass</string>
    <string name="toolbar_title_bruker">Bruker</string>
    <string name="log_out">Logg Ut</string>
    <string name="name_placeholder">Navn</string>
    <string name="email_placeholder">Email@domain.com</string>
    <string name="rediger_bruker">Rediger Bruker:</string>
    <string name="navn">Navn</string>
    <string name="alder">Alder</string>
    <string name="lagre">LAGRE</string>
    <string name="age_placeholder">Alder</string>
    <string name="rediger_profil">Rediger Profil</string>
    <string name="skip">Skip</string>
    <string name="button_opprett_teltplass">Opprett Teltplass</string>
    <string name="textview_underlag">Kupert underlag:</string>
    <string name="textview_utsikt" >Grad av utsikt:</string>
    <string name="textview_avstand">Avstand fra turstart:</string>
    <string name="switch_skog">Skog</string>
    <string name="switch_fjell">Fjell</string>
    <string name="switch_fiske">Fiske</string>
    <string name="mine_teltplasser_title">Mine Teltplasser</string>
    <string name="mine_favoritter_title">Mine Favoritter</string>
    <string name="button_opprett_kommentar">Opprett Kommentar</string>
    <string name="button_avbryt_kommentar">Avbryt</string>
    <string name="edittext_kommentar_hint">Skriv kommentar her...</string>
    <string name="registrert_av">Registrert av:</string>
    <string name="beskrivelse">Beskrivelse</string>
    <string name="button_avbryt">Avbryt</string>
    <string name="channel_name">default</string>
    <string name="channel_description">default notification channel</string>
    <string name="varslinger">Varslinger</string>
    <string name="button_edit_teltplass">Rediger</string>
    <string name="button_lagre_teltplass_endringer">Lagre endringer</string>
    <string name="button_slett_teltplass">Slett</string>

    <string-array name="filter_items">
        <item>Skog</item>
        <item>Fjell</item>
        <item>Fiske</item>
    </string-array>
</resources>
